Fixed infoStation price table align issue

--- a/src/app/components/moonbase/info/info-moonboxes/info-moonboxes.component.scss
+++ b/src/app/components/moonbase/info/info-moonboxes/info-moonboxes.component.scss
@@ -182,7 +182,7 @@ section.info-moonboxes {
         border-bottom: 1px solid $primary;
         padding-bottom: 10px;
         .pr {
-            padding-right: 30px;
+            padding-right: 40px;
         }
     }
     .table-columns {
